@@ -1,6 +1,7 @@
 0.9.31
 - Hide poster/plot on osd now shows title and infoline
 - Weather widget can focus
+- Option to show program times instead of genre in PVR guide
 
 0.9.30
 Stop prompt for installing plugins for info/search lists if disabled/not-installed
